--- a/style.css
+++ b/style.css
@@ -1,12 +1,103 @@
 
+* {
+    -webkit-box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    box-sizing:border-box;
+  }
+  
+  *:before, *:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  }
+  
+  /*.clearfix {
+    clear:both;
+  }*/
   
   .text-center {text-align:center;}
+  
+  /*a {
+    color: tomato;
+    text-decoration: none;
+  }*/
+  
+  /*a:hover {
+    color: #2196f3;
+  }*/
+  
+  pre {
+  display: block;
+  padding: 9.5px;
+  margin: 0 0 10px;
+  font-size: 13px;
+  line-height: 1.42857143;
+  color: #333;
+  word-break: break-all;
+  word-wrap: break-word;
+  background-color: #F5F5F5;
+  border: 1px solid #CCC;
+  border-radius: 4px;
+  }
+  
+  /*.header {
+    padding:20px 0;
+    position:relative;
+    margin-bottom:10px;
+    
+  }
+  
+  .header:after {
+    content:"";
+    display:block;
+    height:1px;
+    background:#eee;
+    position:absolute; 
+    left:30%; right:30%;
+  }
+  
+  .header h2 {
+    font-size:3em;
+    font-weight:300;
+    margin-bottom:0.2em;
+  }
+  
+  .header p {
+    font-size:14px;
+  }
+  
+  
+  
+  #a-footer {
+    margin: 20px 0;
+  }
+  
+  .new-react-version {
+    padding: 20px 20px;
+    border: 1px solid #eee;
+    border-radius: 20px;
+    box-shadow: 0 2px 12px 0 rgba(0,0,0,0.1);
+    
+    text-align: center;
+    font-size: 14px;
+    line-height: 1.7;
+  }
+  
+  .new-react-version .react-svg-logo {
+    text-align: center;
+    max-width: 60px;
+    margin: 20px auto;
+    margin-top: 0;
+  }
+  
+  
+  */
   
   
   .success-box {
     margin:10px 0;
     padding:5px 5px;
-    border:1px solid #eee;
+    
     background:#f9f9f9;
   }
   
@@ -53,3 +144,26 @@
     color:#FF912C;
   }
   
+
+  .sale{
+    position: absolute;
+    right: 67px;
+    top: 0px;
+    background: red;
+    text-align: center;
+    border-radius: 30px 30px 30px 30px;
+    color: white;
+    padding: 3px;
+    font-size: 10px;
+  }
+  .sale2{
+    position: absolute;
+    right: 15px;
+    top: 0px;
+    background: red;
+    text-align: center;
+    border-radius: 30px 30px 30px 30px;
+    color: white;
+    padding: 3px;
+    font-size: 10px;
+  }
