--- a/style.css
+++ b/style.css
@@ -167,3 +167,25 @@
     padding: 3px;
     font-size: 10px;
   }
+
+  .wrapper {
+    display: flex;
+    width: 100%;
+}
+
+#sidebar {
+    width: 250px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    z-index: 999;
+    background: #7386D5;
+    color: #fff;
+    transition: all 0.3s;
+}
+
+.wrapper li a{
+    color: white!important;
+    padding: 10px!important; 
+}
